Fixed quick switcher workspaces not showing

--- a/app/ui/css/constants/colors.less
+++ b/app/ui/css/constants/colors.less
@@ -130,7 +130,7 @@ body {
     --color-surprise: #c5bbff;
     --color-info: #75ddff;
 
-    --color-bg: #6d62c0;
+    --color-bg: #695eb8;
     --color-font: #fff;
 
     --hl-xxs: rgba(207, 190, 255, 0.05);
